Fix overflow on editor

--- a/src/components/templates/TemplatesEditor.css
+++ b/src/components/templates/TemplatesEditor.css
@@ -2,3 +2,7 @@
 {
     overflow-y: auto;
 }
+
+.templates-editor--message--preview p {
+    overflow-y: scroll;
+}
